best-practices-cel/restrict-node-port/.kyverno-test/resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: badservice01
spec:
  ports:
  - name: http
    nodePort: 31080
    port: 80
    protocol: TCP
    targetPort: 8080
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: goodservice01
spec:
  ports:
  - name: http
    nodePort: 31080
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: goodservice02
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  type: LoadBalancer
