best-practices-cel/restrict-node-port/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-node-port
policies:
- ../restrict-node-port.yaml
resources:
- ../../../best-practices/restrict-node-port/.kyverno-test/resource.yaml
results:
- kind: Service
  policy: restrict-nodeport
  resources:
  - badservice01
  result: fail
  rule: validate-nodeport
- kind: Service
  policy: restrict-nodeport
  resources:
  - goodservice01
  - goodservice02
  result: pass
  rule: validate-nodeport
